On branch keyboardSectionHackFest, modified:   aria-practices.html. Fixed misspelling of  a section tag.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3619,7 +3619,7 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
       </section>
     </section>
     </section>
-  <secttion id="keyboard_js_tips">
+  <section id="keyboard_js_tips">
     <H3>Focus Management Programming Tips</H3>
     <ul>
         <li>
@@ -3661,7 +3661,7 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
           There are <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets" title="Keyboard-navigable JavaScript widgets - MDN" target="_blank">user agent-specific considerations</a> for key event handling.
         </li>
       </ul>
-      </secttion>
+      </section>
 </section>
 <section id="kbd_general_other">
       <h2> Other Widget Authoring Practices</h2>
