On branch keyboardSectionHackFest, modified:   aria-practices.html. Added note to dual focus section of keyboard section; the section still needs significant editing.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3276,6 +3276,9 @@ function detectHiContrast() {
       </section>
       <section id="dualfocus">
       <h3>Focus VS Selection and the Perception of Dual Focus</h3>
+      <p class="note">
+      Repurposed old content -- not yet edited.
+      </p>
       <p>
       Often applications give the  perception of having a dual focus. 
       Two examples of this are multi-selection list boxes and selected tabs, within a tablist, when focus is in a tabpanel. 
