On branch keyboardSectionHackFest, modified:   aria-practices.html. Added editor's note to keyboard shortcuts section.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3635,6 +3635,9 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
     </section>
       <section id="kbd_shortcuts">
       <h3>Keyboard Shortcuts for Widgets</h3>
+      <p class="note">
+      MCK: This section aggregates old content on this topic; requires significant revision.
+      </p>
       <p>
       It is useful to provide keyboard access to widgets, to focus a widget directly and to activate the features within the widget. 
       These may be &quot;mnemonics&quot; that use a letter from the label of the control, as well as other special keys that perform familiar operations on the system. 
