On branch keyboardSectionHackFest, modified:   aria-practices.html. Changed title of section 5.1.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3202,7 +3202,7 @@ function detectHiContrast() {
   <li>Addressing macro navigation concerns, i.e., methods for enabling efficient keyboard access to different sections of a page or site.</li>
   </ol>
     <section id="kbd_generalnav">
-    <h3>Overview of Keyboard Navigation Conventions</h3>
+    <h3>Fundamental Keyboard Navigation Conventions</h3>
       <p>
       ARIA roles, states, and properties model accessibility behaviors and features shared among GUI components of popular desktop GUIs, including Microsoft Windows, Mac OS X, and GNOME.
       Similarly, ARIA design patterns borrow user expectations and keyboard conventions from those platforms, consistently incorporating common conventions with the aim of facilitating easy learning and efficient operation of keyboard interfaces across the web.
