--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3490,7 +3490,7 @@ function detectHiContrast() {
     <section id="modal_dialog">
  <h3>Managing Focus in Dialogs</h3>
  <p class="note">
- MCK: unedited content pulled together from the old guide that needs a significant re-write.
+ MCK: unedited content pulled together from the old guide that needs a significant re-write. Please ignore this section for now.
  </p>
 <p>
 WAI-ARIA provides for two dialog roles - dialog and alertdialog. When authors simulate dialogs on a web page they often limit their interaction considerations to the mouse. Unlike Graphical User Interface dialog boxes on a desktop computer, a user during keyboard navigation could accidentally navigate outside the dialog box and become disoriented. This can happen when the user is tabbing in the dialog. A modal dialog prevents the user from setting focus outside of the dialog until the dialog is closed. Mouse clicks outside of the dialog must be ignored and the user must not be able to tab into or out of the dialog itself. All WAI-ARIA enabled dialog boxes should be modal. This section describes how.
@@ -3507,8 +3507,6 @@ Search the contents of the dialog container to find the first and last tab focus
 <p>
 Before the dialog is shown, create and display the dialog underlay. Connect an onkeypress event handler to the DOM document.documentElement. This will catch all keystrokes on the document and allow trapping keyboard focus within the dialog. Size and position the dialog box in the viewport above the underlay, make it visible and set focus to the first tab focusable item in the dialog box.
 </p>
-      <section id="trap_focus_div">
-<h4 id="trap_focus">Trapping Focus</h4>
 <p>
 The onkeypress handler will catch all key presses within the document. This onkeypress event handler should be within the scope of the dialog box code so that it has access to the first and last tab focusable elements within the dialog. In the onkeypress handler determine the target of the keypress event. In addition, determine if there is only a single focusable item within the dialog box. In this instance the first tab navigable object will equal the last tab navigable object. If key presses within the dialog box may create, destroy, enable, disable, or change the visibility of tab focusable elements, then determine the first and last tab-focusable items each time a keypress is received. Based on the event target and the key pressed take the following actions:
 </p>
@@ -3584,9 +3582,6 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
 } // end of if evt.charOrCode
 } // end of function
 </pre>
-
-  </section>
-
   </section>
   <section id="kbd_disabled_controls">
     <h3>Focusability of disabled controls</h3>
@@ -3634,25 +3629,104 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
     </p>
     </section>
       <section id="kbd_shortcuts">
-      <h3>Keyboard Shortcuts for Widgets</h3>
-      <p class="note">
-      MCK: This section aggregates old content on this topic; requires significant revision.
-      </p>
+      <h3>Keyboard Shortcuts</h3>
       <p>
-      It is useful to provide keyboard access to widgets, to focus a widget directly and to activate the features within the widget. 
-      These may be &quot;mnemonics&quot; that use a letter from the label of the control, as well as other special keys that perform familiar operations on the system. 
-      When providing non-standard key commands, document them so the user knows how to use them.
+      When effectively designed, keyboard shortcuts that focus an element, activate a widget, or both can dramatically enhance usability of frequently used features of a page or site. 
+      This section addresses some of the keyboard shortcut design and implementation factors that most impact their effectiveness, including:
       </p>
+      <ol>
+      <li>Understanding how keyboard shortcuts augment a keyboard interface and whether to make a particular shortcut move focus, perform a function, or both. </li>
+      <li>Making key assignments and avoiding assignment conflicts with assistive technologies, browsers, and operating systems. </li>
+      <li>Exposing and documenting key assignments. </li>
+      </ol>
+      <section id="kbd_shortcuts_behavior_design">
+      <h4>Designing the Scope and Behavior of Keyboard Shortcuts</h4>
+      <p>This section explains the following factors when determining which elements and features to assign keyboard shortcuts and what behavior to give each shortcut:</p>
+      <ol>
+      <li>Ensuring discovery through navigation; keyboard shortcuts enhance, not replace, standard keyboard access.</li>
+      <li>Effectively choosing from among the following possible behaviors:
+      <ol>
+      <li>Navigation: Moving focus to an element. </li>
+      <li>Activation: Performing an operation associated with an element that does not have focus and might not be visible.</li>
+      <li>Navigation and activation: Both moving focus to an element and activating it. </li>
+      </ol>
+      </li>
+      <li>Balancing efficiency and cognitive load: lack of a shortcut can reduce efficiency while too many shortcuts can increase cognitive load and clutter the experience. </li>
+      </ol>
+      <h5>Ensure Basic Access Via Navigation </h5>
       <p>
-      When localizing the user interface, it may be necessary to localize keyboard mnemonics as well in order to keep them apparent. 
-      Be sure not to introduce key conflicts when doing this, and ensure that the correct key commands remain apparent to the user.
+      Before assigning keyboard shortcuts, it is essential to ensure the features and functions to which shortcuts may be assigned are keyboard accessible without a keyboard shortcut.
+      In other words, all elements that could be targets for keyboard shortcuts need to be focusable via the keyboard using the methods described in:
       </p>
+      <ul>
+      <li><a href="#kbd_general_between"></a> </li>
+      <li><a href="#kbd_general_within"></a> </li>
+      </ul>
+<p>      
+Do not use keyboard shortcuts as a substitute for access via navigation. 
+This is essential to full keyboard access because:
+</p>
+<ol>
+<li>The primary means of making functions and their shortcuts discoverable is by making the target elements focusable and revealing key assignments on the element itself. </li>
+<li>If people who rely on the keyboard have to read documentation to learn which keys are required to use an interface, the interface may technically meet some accessibility standards but in practice is only accessible to the small subset of them who have the knowledge that such documentation exists, have the extra time available, and the ability to retain the necessary information. </li>
+<li>Not all devices that depend on keyboard interfaces can support keyboard shortcuts. </li>
+</ol>
+<h5>Choose Appropriate Shortcut Behavior</h5>
+<p>The following conventions may help identify the most advantageous behavior for a keyboard shortcut. </p>
+<ul>
+<li>
+Move focus when the primary objective is to make navigation more efficient, e.g., reduce the number of times the user must press <kbd>Tab</kbd> or the arrow keys.
+This behavior is commonly expected when assigning a shortcut to a text box, toolbar, or composite, such as a listbox, tree, grid, or menubar.
+This behavior is also useful for moving focus to a section of a page, such as the main content or a complementary landmark section.
+</li>
+<li>
+Activate an element without moving focus when the target context of the funtion is the context that contains the focus.
+This behavior is most common for command buttons and for functions associated with elements that are not visible, such as a "Save" option that is accessible via a menu.
+For example, if the focus is on an option in a listbox and a toolbar contains buttons for moving and removing options, it is most benefitial to keep focus in the listbox when the user presses a key shortcut for one of the buttons in the toolbar.
+This behavior can be particularly important for screen reader users because it provides confirmation of the action performed and makes performing multiple commands more efficient.
+For instance, when a screen reader user presses the shortcut for the "Up" button, the user will be able to hear the new position of the option in the list since it still has the focus.
+Similarly, when the user presses the shortcut for deleting an option, the user can hear the next option in the list and immediately decide whether to press the delete shortcut again.
+</li>
+<li>
+Move focus and activate when the target of the shortcut has a single function and the context of that function is the same as the target. 
+This behavior is typical when a shortcut is assigned to a button that opens a menu or dialog, to a checkbox, or to a navigation link or button.
+</li>
+</ul>
+<h5>Choose Where to Add Shortcuts </h5>
+<p>
+The first goal when designing a keyboard interface is simple, efficient, and and intuitive operation with only basic keyboard navigation support.
+If basic operation of a keyboard interface is inefficient , attempting to compensate for fundamental design issues, such as suboptimal layout or command structure,  by implementing keyboard shortcuts will not likely reduce user frustration.
+The practical implication of this is that, in most well-designed user interfaces, the percentage of functionality that needs to be accessible via a keyboard shortcut in order to create optimal usability is not very high.
+In many simple user interfaces, keyboard shortcuts can be entirely superfluous.
+And, in user interfaces with too many keyboard shortcuts, the excess shortcuts create cognitive load that make the most useful ones more difficult to remember. 
+</p>
+<p>Consider the following when deciding where to assign keyboard shortcuts: </p>
+<ol>
+</ol>
+<li>To be written ... stream of consciousness includes frequency of use, repetitive operations, amount of benefit (key presses saved), minimizing the number with placement, e.g., focus on a menubar with first letter nav vs assigning shortcuts to individual menuitems.</li>
+      </section>
+      <section id="kbd_shortcuts_assigning">
+      <h4>Assigning Keyboard Shortcuts</h4>
       <p>
-      Author-defined keyboard short-cuts or mnemonics present a high risk for assistive technology users. 
-      Because they are device-, browser-, and AT-dependent, conflicts among key bindings are highly probable. 
-      Therefore, if you needed to use <a href="http://www.w3.org/TR/1999/REC-html401-19991224/interact/forms.html#h-17.11.2">accesskey</a>,  you should be aware that  it will behave differently in different browsers.
-        It also may not work with small devices so it is still advisable to ensure that all features are accessible with the  basic keys like <kbd>Tab/Shift + Tab</kbd>, arrow, <kbd>Enter</kbd>, <kbd>Space</kbd> and <kbd>Escape</kbd>. 
+      These may be &quot;mnemonics&quot; that use a letter from the label of the control, as well as other special keys that perform familiar operations on the system.
+      When localizing the user interface, localize keyboard mnemonics as well.
+      </p>
+      </section>
+      <section id="kbd_shortcuts_exposing">
+      <h4>Exposing and Documenting Keyboard Shortcuts</h4>
+      <p>
+      This is where we will talk about how the keyshortcuts property exposes shortcuts to assistive technology, visual exposure via tooltips, and the like.
+      We will also cover making it easy to find documentation, such as in an accessibility section in help or a keyboard shortcuts option in a help menu.
+      </p>
+      </section>
+      <section id="kbd_shortcuts_implementing">
+      <h4>Implementing keyboard shortcuts</h4>
+      <p>
+      Not sure if we will have this section ... could include some js tips and note about
+      access keys ...
+      <a href="http://www.w3.org/TR/1999/REC-html401-19991224/interact/forms.html#h-17.11.2">accesskey</a> behave differently in different browsers.
         </p>
+      </section>
     </section>
   <section id="keyboard_js_tips">
     <H3>Other Keyboard Interface Development Tips</H3>
